[project]
name = "pymodules"
dynamic = ['version']
authors = [
  { name="Benjamin Roland", email="benjamin.roland@hotmail.fr" },
]
description = "A collection of helper functions for common pandas / numpy / string & files manipulations in Python"
readme = "README.md"
license = { text="BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = ["pandas", "numpy", "scipy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Parici75/pymodules"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.setuptools_scm]
local_scheme = 'node-and-date'
version_scheme = 'guess-next-dev'

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

# mypy config
[tool.mypy]
allow_untyped_defs = false
# mypy per-module options:
[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*", "pandas.*", "matplotlib.*"]
ignore_missing_imports = true



